--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,10 @@
 name: Deploy Notícias
 
-# Executa este job toda vez que houver um push na branch main
-# e também a cada 3 horas (usando cron)
 on:
   push:
     branches:
       - main
   schedule:
-    # A cada 3 horas (03:00, 06:00, 09:00, etc.)
     - cron: '0 */3 * * *' 
 
 jobs:
@@ -21,15 +18,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+          
+      - name: Change to 'noticias' directory
+        run: cd noticias
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
+          pip install -r noticias/requirements.txt
+          
       - name: Run Python bot to collect news
-        run: python coletor.py
-
+        run: python noticias/coletor.py
+        
       - name: Create `index.html` (for the website)
         run: |
           cat > index.html << 'EOF'
