--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Permite que o workflow escreva no repositório
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -25,10 +27,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r noticias/requirements.txt
+          pip install -r requirements.txt
           
       - name: Run Python bot to collect news
-        run: python noticias/coletor.py
+        run: python coletor.py
         
       - name: Create `index.html` (for the website)
         run: |
