--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,7 +150,7 @@ jobs:
                       const statusMessage = document.getElementById('status-message');
                       const newsSourceSelector = document.getElementById('news-source');
 
-                      fetch('todas_as_noticias.json')
+                      fetch('noticias/todas_as_noticias.json')
                           .then(response => {
                               if (!response.ok) {
                                   throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
