--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
 
               <footer class="bg-gray-800 text-white p-6 mt-8">
                   <div class="container mx-auto text-center">
-                      <p>&copy; 2025 Portal de Notícias. Todos os direitos reservados.</p>
+                      <p>&copy; 2024 Portal de Notícias. Todos os direitos reservados.</p>
                   </div>
               </footer>
 
@@ -150,7 +150,7 @@ jobs:
                       const statusMessage = document.getElementById('status-message');
                       const newsSourceSelector = document.getElementById('news-source');
 
-                      fetch('noticias/todas_as_noticias.json')
+                      fetch('noticias/todas_as_noticias.json?' + new Date().getTime())
                           .then(response => {
                               if (!response.ok) {
                                   throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
