--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,12 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies from 'noticias' folder
-        # Usa 'working-directory' para garantir que os comandos rodem na pasta 'noticias'
         working-directory: ./noticias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
       - name: Run Python bot to collect news
-        # Executa o bot a partir da pasta 'noticias'
         working-directory: ./noticias
         run: python coletor.py
         
@@ -137,7 +135,9 @@ jobs:
                   document.addEventListener('DOMContentLoaded', () => {
                       const statusMessage = document.getElementById('status-message');
                       const newsSourceSelector = document.getElementById('news-source');
-                      fetch('noticias/todas_as_noticias.json')
+                      // Adiciona um timestamp para evitar o cache do navegador
+                      const cacheBuster = `?timestamp=${Date.now()}`;
+                      fetch(`noticias/todas_as_noticias.json${cacheBuster}`)
                           .then(response => {
                               if (!response.ok) {
                                   throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe.`);
