--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,19 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pages: write
+      id-token: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install dependencies from 'noticias' folder
+      - name: Install dependencies
         working-directory: ./noticias
         run: |
           python -m pip install --upgrade pip
@@ -135,12 +137,11 @@ jobs:
                   document.addEventListener('DOMContentLoaded', () => {
                       const statusMessage = document.getElementById('status-message');
                       const newsSourceSelector = document.getElementById('news-source');
-                      // Adiciona um timestamp para evitar o cache do navegador
                       const cacheBuster = `?timestamp=${Date.now()}`;
                       fetch(`noticias/todas_as_noticias.json${cacheBuster}`)
                           .then(response => {
                               if (!response.ok) {
-                                  throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe.`);
+                                  throw new Error(`Erro ${response.status}: ${response.statusText}. Verifique se o arquivo existe e se o bot foi executado.`);
                               }
                               return response.json();
                           })
@@ -163,8 +164,14 @@ jobs:
           </html>
           EOF
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          path: .
+          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
