--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
               </main>
               <footer class="bg-gray-800 text-white p-6 mt-8">
                   <div class="container mx-auto text-center">
-                      <p>&copy; 2024 Portal de Notícias. Todos os direitos reservados.</p>
+                      <p>&copy; 2025 Portal de Notícias. Todos os direitos reservados.</p>
                   </div>
               </footer>
               <script>
@@ -166,13 +166,19 @@ jobs:
           </html>
           EOF
 
+      - name: Prepare for deploy
+        run: |
+          mkdir dist
+          mv index.html dist/
+          mv noticias dist/
+      
       - name: Setup Pages
         uses: actions/configure-pages@v5
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: ./dist
           
       - name: Deploy to GitHub Pages
         id: deployment
