--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,22 +15,20 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-
-      - name: Install dependencies
+          
+      - name: Install dependencies and Run bot
+        # Executa os comandos a partir da pasta 'noticias'
         working-directory: ./noticias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-      - name: Run Python bot to collect news
-        working-directory: ./noticias
-        run: python coletor.py
+          python coletor.py
         
       - name: Create `index.html` (for the website)
         run: |
@@ -162,14 +160,8 @@ jobs:
           </html>
           EOF
 
-      - name: Prepare for deploy
-        run: |
-          mkdir dist
-          mv index.html dist/
-          mv noticias dist/
-      
       - name: Deploy to GitHub Pages (Legacy Method)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./
